# a-star

./: CHANGELOG.md  LICENSE  README.md  a-star.cabal
src/: AStar.hs  Grid.hs
test/: test-astar.hs  test-grid.hs
