cabal-version:      3.0
name:               a-star

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
synopsis:           Simple a_star implementation and visualisation project
-- description:

license:            BSD-3-Clause
license-file:       LICENSE
author:             emmanueltudela

build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md

common warnings
    ghc-options: -Wall

library
    exposed-modules:  AStar

    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

Test-suite test-astar
    type:             exitcode-stdio-1.0
    main-is:          test-astar.hs

    other-modules:    AStar

    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   test, src


executable a-star
    -- Import common warning flags.
    import:           warnings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    AStar

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app, src
    default-language: Haskell2010
